<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_dialog_style"
        android:padding="0dp"
        android:backgroundTint="@android:color/white">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:padding="12dp"
                    android:text="@string/about_developer"
                    android:textColor="#3b3b3b"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="18dp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="270dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/coverImage"
                        android:contentDescription="@string/image"
                        android:foreground="#5a9b59b6"
                        android:scaleType="centerCrop" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profileImage"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@mipmap/ic_profile_default"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:elevation="4dp"
                        app:civ_border_color="@android:color/white"
                        app:civ_border_width="2dp" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#3498db"
                        android:padding="6dp"
                        android:layout_gravity="bottom"
                        android:text="@string/reach_me_with"
                        android:textColor="@android:color/white"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="bottom|right">

                        <android.support.design.widget.FloatingActionButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/btnContactLinkedin"
                            app:srcCompat="@drawable/ic_linkedin_logo"
                            android:scaleType="centerInside"
                            app:backgroundTint="#007BB5"
                            android:tint="@android:color/white"
                            android:layout_marginRight="8dp"
                            android:visibility="gone"
                            />

                        <android.support.design.widget.FloatingActionButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/btnMail"
                            app:srcCompat="@android:drawable/ic_dialog_email"
                            app:backgroundTint="@android:color/holo_orange_dark"
                            android:tint="@android:color/white"/>

                    </LinearLayout>

                </FrameLayout>

                <include layout="@layout/content_about_dialog"/>



            </LinearLayout>

        </FrameLayout>


    </ScrollView>

</RelativeLayout>